# python-playwright-test-framework

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  conftest.py  pyproject.toml  pytest.ini  pytest_cli_commands.txt
pom/: home_page.py  login_page.py
tests_ui/: test_home_page.py  test_login.py
tests_ui/visual_tests/: test_landing_page_visual.py
