[tool.poetry]
name = "python-playwright-test-framework"
version = "0.1.0"
description = ""
authors = ["m.biletskyi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.48.0"
pytest-playwright = "^0.5.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
